Fixed up alignement of items in home page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,6 +33,10 @@ nav {
   border-radius: 0.5rem;
   padding: 1rem;
   margin: 1rem;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .card-container {
